apis have made a good progress and we are nearly done fixing bugs with android client
