# api/controllers/user.js
@@ -1,12 +1,12 @@
 'use strict';
 
 const restified = require('../helpers/restified');
-const {User, UserAddress} = require('../../models');
+const {User, UserAddress, UserRole} = require('../../models');
 const types = require('../helpers/types');
 
 module.exports = restified({
   signup: function*(t, req, res) {
-    const {signup: {value: body}} = req.swagger.params.signup.value;
+    const {signup: {value: body}} = req.swagger.params;
 
     if (types.isString(body.userName)) {
       throw new restified.errors.badRequest(`username was provided: ${body.userName}`);
@@ -34,8 +34,42 @@ module.exports = restified({
       yield user.addUserAddress(userAddress, {transaction: t});
     }
 
+    yield user.createUserRole({
+      role: 'app'
+    }, {transaction: t});
+
     res.json({
       userName: user.userName
     });
+  },
+
+  getCurrentUser: function*(t, req, res) {
+    const {userId} = req.swagger.auth;
+
+    const user = yield User.findOne({
+      where: {id: userId},
+      transaction: t
+    });
+
+    const result = {
+      userName: user.userName,
+      email: user.email,
+      phoneNumber: user.phoneNumber,
+      firstName: user.firstName,
+      lastName: user.lastName,
+      birthDate: {
+        year: user.birthDateYear,
+        month: user.birthDateMonth,
+        day: user.birthDateDay
+      },
+      gender: user.gender,
+      addresses: (yield user.getUserAddresses()).map(x => x.address)
+    };
+
+    if (user.weight !== null) {
+      result.weight = user.weight;
+    }
+
+    res.json(result);
   }
 });
